# Physical-ai-humanoid-robotics-book

./: .gitignore  .prettierignore  GEMINI.md  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: README.md  agent.py  chatbot_api.py  main.py  pyproject.toml  requirements.txt  retrieve.py  schemas.py
docs/00-getting-started/: introduction.mdx  prerequisites.mdx  workstation-setup.mdx
docs/01-module1-ros2/: building-ros2-packages.mdx  introduction-to-ros2.mdx  launch-files-and-parameters.mdx  urdf-for-humanoid-robots.mdx
docs/02-module2-gazebo-unity/: gazebo-environment-setup.mdx  physics-simulation.mdx  sensor-simulation.mdx  unity-for-robot-visualization.mdx
docs/03-module3-nvidia-isaac/: isaac-ros-integration.mdx  isaac-sim-fundamentals.mdx  nav2-path-planning.mdx  sim-to-real-transfer.mdx
docs/04-module4-vla/: llm-cognitive-planning.mdx  multi-modal-interaction.mdx  voice-to-action-pipeline.mdx
docs/05-hardware-guide/: cloud-vs-on-premise.mdx  digital-twin-workstation.mdx  edge-ai-kit.mdx  robot-lab-options.mdx
docs/06-capstone-project/: project-overview.mdx  step-by-step-implementation.mdx
docs/07-assessments/: project-based-evaluations.mdx
scripts/: optimize_images.sh  ros2_code_validator.sh
specs/001-create-robotics-book/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-extract-audio-features/: spec.md
specs/003-enhance-ui-logo/: design-guidelines.md  plan.md  research.md  spec.md  tasks.md
src/clientModules/: chatbot.js  (+1 more)
(+115 files in other folders)
